# picostdlib

./: .gitignore  .gitmodules  LICENSE  README.md  piconim  piconim.nim  picostdlib.nimble
examples/: CMakeLists.txt  blink.nim  build.nim  config.nims  example0_blink.nim  example1_serial_output.nim  example2_serial_input.nim  example3_analog_input.nim  example4_interrupts.nim  example5_pwm.nim  example6_multicore.nim  freertos_blink.nim  hello48mhz.nim  hello_adc.nim  hello_async.nim  hello_i2c.nim  hello_multicore.nim  hello_resus.nim  hello_serial.nim  hello_stdio.nim  hello_timestart.nim  hello_usb.nim  hello_watchdog.nim  hellogpioirq.nim  hellopwm.nim  hellorandom.nim  hellotimestart.nim  imports_pico.cmake  imports_pico_w.cmake  joystickdisplay.nim  lightsensor.nim  sevensegmentcounter.nim  tinyusb.nim
examples/adc/: hello_adc.nim  onboard_temperature.nim  read_vsys.nim
examples/clocks/: hello_48mhz.nim  hello_gpout.nim  hello_resus.nim
examples/dma/: hello_dma.nim
examples/filesystem/: hello_filesystem_flash.nim  hello_filesystem_flash.nims  hello_filesystem_sd.nim  hello_filesystem_sd.nims
examples/flash/: hello_littlefs.nim
examples/gpio/: hello_7segment.nim  hello_gpio_irq.nim
examples/hello_pio/: hello_pio.nim
examples/i2c/: bus_scan.nim
examples/multicore/: hello_multicore.nim
examples/pico_w/: config.nims  picow_blink.nim  picow_http_client.nim  picow_mqtt_client.nim  picow_ntp_client.nim  picow_tcp_client.nim  picow_tls_client.nim  picow_tls_client.nims  picow_wifi_scan.nim  wifi_credentials.nims
examples/pio/: CMakeLists.txt  README.md  hello.pio  hello_pio.nim
examples/pwm/: hello_pwm.nim  pwm_led_fade.nim
examples/reset/: hello_reset.nim
examples/rtc/: hello_rtc.nim  rtc_alarm.nim
examples/sleep/: hello_sleep.nim
examples/system/: unique_board_id.nim
examples/timer/: hello_timer.nim
examples/tinyusb/: CMakeLists.txt  README.md  tinyusb.nim  tusb_config.h  usb_descriptors.c
examples/uart/: hello_uart.nim
examples/watchdog/: hello_watchdog.nim
examples/ws2812_pio/: CMakeLists.txt  README.md  ws2812.pio  ws2812_pio.nim
picostdlib/: clock.nim  piconim.nim  pwm.nim
picostdlib/picostdlibpkg/: gpio.nim
picostdlib/picostdlibpkg/template/csource/CMakeLists/: downloadSDK_CMakeLists.txt
src/: piconim.nim  piconim.nims  picostdlib.nim
src/picostdlib/: adc.nim  async.nim  asyncdispatch.nim  clock.nim  futharkgen.nim  futharkgen.nims  gpio.nim  hello_watchdog.nim  helpers.nim  i2c.nim  irq.nim  memoryinfo.nim  multicore.nim  pico.nim  pio.nim  pll.nim  power.nim  private.nim  promise.nim  pwm.nim  random.nim  sevensegdisplay.nim  stdio.nim  time.nim  tusb.nim  watchdog.nim
src/picostdlib/build_utils/: common.nim  include.nims  piconim.nim  tasks.nim
src/picostdlib/build_utils/futharkgen/: CMakeLists.txt  futharkgen.nim  futharkgen.nims
src/picostdlib/build_utils/template/: .gitignore  config.nims
src/picostdlib/build_utils/template/csource/: CMakeLists.txt  btstack_config.h  lwipopts.h  mbedtls_config.h
src/picostdlib/cmake/: picostdlib.cmake
src/picostdlib/hardware/: adc.nim  base.nim  claim.nim  clocks.nim  divider.nim  dma.nim  exception.nim  flash.nim  gpio.nim  i2c.nim  interp.nim  irq.nim  pio.nim  platform_defs.nim  pll.nim  powman.nim  pwm.nim  resets.nim  rosc.nim  rtc.nim  spi.nim  sync.nim  timer.nim  uart.nim  vreg.nim  watchdog.nim  xosc.nim
src/picostdlib/hardware/regs/: clocks.nim  cpu.nim  intctrl.nim  m0plus.nim  resets.nim  spi.nim
src/picostdlib/hardware/structs/: clocks.nim  i2c.nim  interp.nim  rosc.nim  scb.nim  spi.nim  uart.nim
src/picostdlib/lib/: btstack.nim  btstack_ble.nim  btstack_classic.nim  btstack_le_audio.nim  btstack_mesh.nim  cyw43_driver.nim  freertos.nim  httpclient.nim  littlefs.nim  lwip.nim  lwip_apps.nim  promise.nim  tcpclient.nim  tcpclient_lwip.nim  tcpclient_native.nim
src/picostdlib/lib/cyw43_driver/: cyw43.nim  cyw43_country.nim  cyw43_ll.nim
src/picostdlib/lib/lwip/: altcp.nim  altcp_tls.nim  def.nim  dhcp.nim  dns.nim  err.nim  icmp.nim  init.nim  ip.nim  ip4.nim  ip4_addr.nim  ip6.nim  ip6_addr.nim  ip6_zone.nim  ip_addr.nim  mem.nim  netif.nim  opt.nim  pbuf.nim  tcp.nim  tcpbase.nim  timeouts.nim
src/picostdlib/lib/mbedtls/: ssl.nim
src/picostdlib/lib/wifi/: clientcontext.nim  dns.nim  tcpcontext.nim
src/picostdlib/net/: common.nim  dns.nim  httpclient.nim  mqttclient.nim  picosocket.nim
src/picostdlib/patches/: asyncmacro.nim  monotimes.nim  posix_other.nim
src/picostdlib/pico/: aon_timer.nim  async_context.nim  binary_info.nim  bit_ops.nim  bootrom.nim  critical_section.nim  cyw43_arch.nim  cyw43_driver.nim  divider.nim  double.nim  error.nim  filesystem.nim  flash.nim  float.nim  i2c_slave.nim  lock_core.nim  multicore.nim  mutex.nim  platform.nim  rand.nim  runtime_init.nim  sem.nim  sleep.nim  stdio.nim  sync.nim  time.nim  types.nim  unique_id.nim  version.nim
src/picostdlib/pico/util/: datetime.nim  pheap.nim  queue.nim
src/picostdlib/private/: piconim.nim  tusb.nim
src/picostdlib/private/template/: .gitignore  config.nims  template.nimble
src/template/: .gitignore  config.nims
src/template/csource/: CMakeLists.txt
src/template/csource/CMakeLists/: downloadSDK_CMakeLists.txt  existingSDK_CMakeLists.txt
src/template/src/: blink.nim
src/utils/: picousb.nim
template/: CMakeLists.txt
template/csource/: CMakeLists.txt  FreeRTOSConfig.h  btstack_config.h  lwipopts.h  mbedtls_config.h
template/csource/CMakeLists/: existingSDK_CMakeLists.txt
template/src/: blink.nim  config.nims
tests/: CMakeLists.txt  FreeRTOSConfig.h  btstack_config.h  build.nim  config.nims  imports.cmake  init.txt  lwipopts.h  mbedtls_config.h  pico_sdk_import.cmake  test_mock.nim  test_mock.nims  test_pico.cmake  test_pico.nim  test_pico.nims  test_pico_imports.cmake  test_pico_w.cmake  test_pico_w.nim  test_pico_w.nims  ttest.nim
tests/pico/: CMakeLists.txt  imports.cmake  test_pico.nim
tests/pico_w/: CMakeLists.txt  FreeRTOSConfig.h  btstack_config.h  config.nims  imports.cmake  lwipopts.h  mbedtls_config.h  test_pico_w.nim
(+9 files in other folders)
